<resources>
    <string name="app_name">GestiTaller</string>
    <string name="add_client">Añadir cliente</string>
    <string name="direction">Dirección</string>
    <string name="add_button">Añadir</string>
    <string name="license_plate">Matrícula</string>
    <string name="surname">Apellido</string>
    <string name="name">Nombre</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="client">Cliente</string>
    <string name="client_capital">CLIENTE</string>
    <string name="bike_capital">MOTO</string>
    <string name="order_capital">ORDEN</string>
    <string name="dni">DNI</string>
    <string name="no_vip">No es VIP</string>
    <string name="vip">Es VIP</string>
    <string name="description">Descripción</string>
    <string name="date">Fecha</string>
    <string name="bike">Moto</string>
    <string name="modify_capital">MODIFICAR</string>
    <string name="google_maps_key">AIzaSyAS-E1TdrFb9UU_Su4gaT7ZPcbypCwUsCE</string>
    <string name="are_you_sure_delete_order">¿Estás seguro de eliminar la orden para siempre?</string>
    <string name="yes_capital">SI</string>
    <string name="no_capital">NO</string>
    <string name="are_you_sure_delete_client">¿Estás seguro de eliminar el cliente para siempre?</string>
    <string name="are_you_sure_delete_bike">¿Estás seguro de eliminar la moto para siempre?</string>
    <string name="added_order">Orden añadida</string>
    <string name="modified_order">Orden modificada</string>
    <string name="complete_all_fields">Completa todos los campos</string>
    <string name="select_bike">Selecciona una moto</string>
    <string name="added_client">Cliente añadido</string>
    <string name="modified_client">Cliente modificado</string>
    <string name="select_map_position">Selecciona una posición en el mapa</string>
    <string name="added_bike_success">Moto añadida correctamente</string>
    <string name="modified_bike_success">Moto modificada correctamente</string>
    <string name="modified_bike_error">Error al modificar la moto</string>
    <string name="added_client_success">Cliente añadido correctamente</string>
    <string name="added_client_error">Error al añadir cliente</string>
    <string name="modified_client_error">Error al modificar cliente</string>
    <string name="modified_client_success">Cliente modificado correctamente</string>
    <string name="error_ocurred">Ha ocurrido un error</string>
    <string name="client_deleted_successfully">Cliente eliminado correctamente</string>
    <string name="client_delete_error">El cliente no ha podido ser eliminado</string>
    <string name="added_bike_error">Error al añadir la moto</string>
    <string name="added_to_fav_success">Añadido a FAVORITOS 💖</string>
    <string name="added_to_fav_error">Ya está en FAVORITOS 💖</string>
    <string name="deleted_from_fav">💥 Eliminado de FAVORITOS 💖</string>
</resources>