<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddOrderView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/client_textview_add_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/client"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/client_spinner_add_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/bike_textview_add_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/bike"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/bike_spinner_add_order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/description_textview_add_order"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/description"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <EditText
                android:id="@+id/description_edittext_add_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="top|left"
                android:inputType="textPersonName"
                android:paddingHorizontal="6dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <TextView
                android:id="@+id/date_textview_add_order"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|start"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_textlabel_add_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:paddingHorizontal="6dp"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/calendar_imageview_add_order"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:onClick="selectDate"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_order_button"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:background="@drawable/custom_button"
        android:onClick="addOrder"
        android:text="@string/add_button"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>