<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".view.MainMenuView">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/client_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/client_capital"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:rotationX="26"
        app:layout_constraintTop_toBottomOf="@+id/client_text_view"
        tools:layout_editor_absoluteX="8dp">

        <ImageButton
            android:id="@+id/add_client_button_menu"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#E5BE01"
            android:onClick="addClient"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/view_client_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#E5BE01"
            android:onClick="viewClient"
            android:src="?android:attr/actionModeFindDrawable" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4006734" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bike_capital"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/order_capital"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:rotationX="26"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp">

        <ImageButton
            android:id="@+id/add_bike_button_menu"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#E5BE01"
            android:onClick="addBike"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/view_bike_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#E5BE01"
            android:onClick="viewBike"
            android:src="?android:attr/actionModeFindDrawable" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:rotationX="26"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/add_order_button_menu"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#E5BE01"
            android:onClick="addOrder"
            android:src="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/view_order_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#E5BE01"
            android:onClick="viewOrder"
            android:src="?android:attr/actionModeFindDrawable" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>